--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,13 @@
 Source: live-config
 Maintainer: Live Systems Maintainers <debian-live@lists.debian.org>
-Uploaders: Iain R. Learmonth <irl@debian.org>
+Uploaders: Iain R. Learmonth <irl@debian.org>, Raphaël Hertzog <hertzog@debian.org>
 Section: misc
 Priority: optional
-Build-Depends: debhelper (>= 9),
-               dh-systemd
+Build-Depends: debhelper (>= 11)
 Build-Depends-Indep: lsb-release
-Standards-Version: 3.9.8
-Vcs-Browser: https://anonscm.debian.org/cgit/debian-live/live-config.git
-Vcs-Git: https://anonscm.debian.org/git/debian-live/live-config.git
+Standards-Version: 4.1.3
+Vcs-Browser: https://salsa.debian.org/live-team/live-config
+Vcs-Git: https://salsa.debian.org/live-team/live-config.git
 Homepage: https://debian-live.alioth.debian.org/live-config/
 
 Package: live-config
