--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,16 @@
 Source: live-config
-Maintainer: gooroom <gooroom@gooroom.kr>
-XSBC-Original-Maintainer: Live Systems Maintainers <debian-live@lists.debian.org>
+Maintainer: Live Systems Maintainers <debian-live@lists.debian.org>
+Uploaders: Iain R. Learmonth <irl@debian.org>,
+           Raphaël Hertzog <hertzog@debian.org>,
+           Jonathan Carter <jcc@debian.org>
 Section: misc
 Priority: optional
 Build-Depends: debhelper (>= 11)
 Build-Depends-Indep: lsb-release
-Standards-Version: 4.1.3
-Vcs-Browser: https://github.com/gooroom/live-config
-Vcs-Git: https://github.com/gooroom/live-config.git
-Homepage: https://www.gooroom.kr
+Standards-Version: 4.3.0
+Vcs-Browser: https://salsa.debian.org/live-team/live-config
+Vcs-Git: https://salsa.debian.org/live-team/live-config.git
+Homepage: https://debian-live.alioth.debian.org/live-config/
 
 Package: live-config
 Architecture: all
@@ -35,6 +37,7 @@ Description: Live System Configuration Components
 
 Package: live-config-doc
 Architecture: all
+Multi-Arch: foreign
 Section: doc
 Depends: ${misc:Depends}
 Description: Live System Configuration Components (documentation)
