--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,15 @@
 Source: live-config
-Maintainer: gooroom <gooroom@gooroom.kr>
-XSBC-Original-Maintainer: Live Systems Maintainers <debian-live@lists.debian.org>
-Uploaders: Iain R. Learmonth <irl@debian.org>,
-           Raphaël Hertzog <hertzog@debian.org>,
+Maintainer: Debian Live Maintainers <debian-live@lists.debian.org>
+Uploaders: Raphaël Hertzog <raphael@offensive-security.com>,
            Jonathan Carter <jcc@debian.org>
 Section: misc
 Priority: optional
-Build-Depends: debhelper (>= 11)
+Build-Depends: debhelper-compat (= 12)
 Build-Depends-Indep: lsb-release
-Standards-Version: 4.3.0
-Vcs-Browser: https://github.com/gooroom/live-config
-Vcs-Git: https://github.com/gooroom/live-config.git
-Homepage: https://www.gooroom.kr
+Standards-Version: 4.5.1
+Vcs-Browser: https://salsa.debian.org/live-team/live-config
+Vcs-Git: https://salsa.debian.org/live-team/live-config.git
+Homepage: https://salsa.debian.org/live-team/live-config
 
 Package: live-config
 Architecture: all
@@ -27,7 +25,7 @@ Recommends: iproute2 | iproute,
 Suggests: pciutils,
           wget
 Description: Live System Configuration Components
- The Live Systems project maintains the components to build Debian based Live
+ The Debian Live project maintains the components to build Debian based Live
  systems and the official Debian Live images themselves.
  .
  live-config contains the components to configure a live system during the boot
@@ -56,7 +54,7 @@ Conflicts: live-config-backend
 Provides: live-config-backend
 Replaces: live-config-backend
 Description: Live System Configuration Components (systemd backend)
- The Live Systems project maintains the components to build Debian based Live
+ The Debian Live project maintains the components to build Debian based Live
  systems and the official Debian Live images themselves.
  .
  live-config contains the components to configure a live system during the boot
@@ -72,7 +70,7 @@ Conflicts: live-config-backend
 Provides: live-config-backend
 Replaces: live-config-backend
 Description: Live System Configuration Components (sysvinit backend)
- The Live Systems project maintains the components to build Debian based Live
+ The Debian Live project maintains the components to build Debian based Live
  systems and the official Debian Live images themselves.
  .
  live-config contains the components to configure a live system during the boot
